<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradiient_blue"
    tools:context=".view.activities.HomeActivity"
    tools:layout_editor_absoluteY="25dp">

    <ImageView
        android:id="@+id/iv_clear_day"
        android:layout_width="wrap_content"
        android:layout_height="178dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/tv_descirpcion_iv_clear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/na" />

    <TextView
        style="@style/textFont"
        android:id="@+id/tv_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/tx_partly_cloudy_label"
        app:layout_constraintEnd_toEndOf="@+id/iv_clear_day"
        app:layout_constraintStart_toStartOf="@+id/iv_clear_day"
        app:layout_constraintTop_toBottomOf="@+id/iv_clear_day" />

    <TextView
        android:id="@+id/tv_current_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/tv_number_grade_label"
        style="@style/textFont"
        android:textSize="@dimen/number_size"
        app:layout_constraintEnd_toEndOf="@+id/tv_description"
        app:layout_constraintStart_toStartOf="@+id/tv_description"
        app:layout_constraintTop_toBottomOf="@+id/tv_description" />

    <ImageView
        android:id="@+id/iv_grade"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/tv_grados_iv_grade"
        app:layout_constraintStart_toEndOf="@+id/tv_current_temp"
        app:layout_constraintTop_toTopOf="@+id/tv_current_temp"
        app:srcCompat="@drawable/degree" />

    <TextView
        android:id="@+id/tv_h_grade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:text="@string/h_grados"
        style="@style/textFont"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_current_temp" />

    <TextView
        android:id="@+id/tv_l_grade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="20dp"
        android:text="@string/l_grade"
        style="@style/textFont"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_current_temp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.33" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.66" />

    <TextView
        style="@style/textFont"
        android:id="@+id/tv_daily"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/daily"
        android:textStyle="bold"
        android:textSize="@dimen/text_barra_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        style="@style/textFont"
        android:id="@+id/tv_hourly"
        android:textSize="@dimen/text_barra_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/hourly"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintStart_toStartOf="@+id/guideline5" />

    <TextView
        style="@style/textFont"
        android:id="@+id/tv_minutely"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/minutely"
        android:textStyle="bold"
        android:textSize="@dimen/text_barra_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline6" />

</android.support.constraint.ConstraintLayout>